aks/services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: basket
  name: basket
  namespace: eshop
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: basket
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: catalog
  name: catalog
  namespace: eshop
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: catalog
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: webmvc
  name: webmvc
  namespace: eshop
  annotations:
        service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: webmvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: basket-data
  name: basket-data
  namespace: eshop
spec:
  ports:
  - port: 6379
  selector:
    app: eshop
    component: basket-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: sql-data
  name: sql-data
  namespace: eshop
spec:
  ports:
  - port: 1433
  selector:
    app: eshop
    component: sql-data
