aks/ingress-rules-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - aksdemo-ingress.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: aksdemo-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /pics
        backend:
          serviceName: catalog
          servicePort: 80
