aks/ingress-rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: eshop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aksdemo-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /pics
        backend:
          serviceName: catalog
          servicePort: 80
      - path: /
        backend:
          serviceName: webmvc
          servicePort: 80
